# UtilsApp

./: README.md  pyproject.toml
src/UtilsApp/: app.py
src/UtilsApp/pages/: hello.py  qr.py
