[project]
name = "pythontemplateproject"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ikura1", email = "ikura.lab@gmail.com" }
]
dependencies = [
    "streamlit>=1.36.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "flake8-isort>=6.0.0",
    "flake8>=5.0.4",
    "bandit>=1.7.5",
]

[tool.rye.scripts]
dev = "streamlit run src/UtilsApp/app.py"
